# SocialMedia_AD_Agency

./: .dockerignore  .env.example  .gitignore  Agents.md  Agents_Security.md  Dockerfile  Documentation.md  Prompt.md  README.md  SYSTEM_DESIGN.md  Upgrade_Prompt.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Instrutctions_File/: AGENTS.md  ATOM_OF_THOUGHT.md  BRAND_TEMPLATE.md  BRIEF_TEMPLATE.md  Brain.md  CLIENTS.md  ENGINEERING_STANDARDS.md  HEARTBEAT.md  Identity.md  LEGAL_COMPLIANCE.md  MEMORY.md  MasterPrompt.md  PLAYBOOK.md  QA_POLICY.md  RECURSIVE_LEARNING.md  SCHEMA.md  Soul.md  TOOLS.md  Tag JSON.md  User.md  VOICE.md  extra.md  skills.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py
app/: __init__.py  config.py  main.py
app/adapters/: __init__.py  amazon_adapter.py  base_adapter.py  instagram_adapter.py  pinterest_adapter.py  storage_adapter.py  tiktok_adapter.py  x_adapter.py
app/agents/: base_agent.py  caption_seo.py  manager.py  orchestrator.py  product_enrichment.py  product_intake.py  reference_intelligence.py  script_templates.py  scriptwriter.py
app/analytics/: __init__.py  chat_engine.py  performance_learner.py
app/analyzers/: __init__.py  seo_auditor.py
app/api/: __init__.py  main.py
app/approval/: __init__.py
app/billing/: __init__.py  quota_enforcer.py  stripe_client.py
app/collectors/: __init__.py  base_collector.py  linkedin_collector.py  (+1 more)
tests/: conftest.py
workspace/: .env.example  README.md  ads.csv  cli.py  cli_commands.py  pyproject.toml  requirements.txt
(+204 files in other folders)
