[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "affiliate-ad-agency"
version = "0.1.0"
description = "CrewAI-powered affiliate ad agency for Amazon products"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.105.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"
